# Structured_Freedom

./: .cursorrules  .env.example  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  CODEX.md  JULES.md  README.md  WINDSURF.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-task.md  bug.md  feature.md
.github/workflows/: ci.yml
docs/: agent-workflow.md  architecture.md  decisions.md  development.md  mvp.md  requirements.md  sprint-backlog.md  tasks.md
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ActionInput.tsx  GameLog.tsx  InventoryPanel.tsx  LocationPanel.tsx  QuestPanel.tsx
frontend/src/types/: game.ts
src/structured_freedom/: __init__.py  logging.py
src/structured_freedom/ai/: __init__.py  dialogue.py  intent.py  narrator.py  provider.py
src/structured_freedom/app/: main.py  turns.py
src/structured_freedom/app/api/: app.py  routes.py  schemas.py
src/structured_freedom/client/: __init__.py  cli.py
src/structured_freedom/config/: settings.py
src/structured_freedom/engine/: __init__.py  actions.py  movement.py  validator.py  world_validators.py
src/structured_freedom/models/: __init__.py  item.py  location.py  npc.py  player.py  world_state.py
src/structured_freedom/persistence/: __init__.py  database.py  models.py
src/structured_freedom/persistence/orm/: __init__.py  models.py
src/structured_freedom/persistence/repositories/: __init__.py  game_repo.py
src/structured_freedom/world/: __init__.py  fixtures.py  scenario.py
tests/: test_movement.py  test_player_model.py  test_settings.py  test_smoke.py  test_turns.py
tests/ai/: test_intent.py
tests/api/: test_turns.py
tests/engine/: test_world_validators.py
tests/models/: test_item.py  test_location.py  test_npc.py  test_player.py  test_world_state.py
tests/persistence/: test_repositories.py
tests/world/: test_fixtures.py
